Ajout des fichiers de jwt (controller, service, DTOs, config sécurité)